--- a/index.html
+++ b/index.html
@@ -557,15 +557,15 @@
         </a>
         <a href="activity1.html">
             <i class="fas fa-sun"></i>
-            <span>Solar Irrigation</span>
+            <span>Activity 1</span>
         </a>
         <a href="activity2.html">
             <i class="fas fa-fire"></i>
-            <span>Geothermal Plant</span>
+            <span>Activity 2</span>
         </a>
         <a href="activity3.html">
             <i class="fas fa-recycle"></i>
-            <span>Biomass Biogas</span>
+            <span>Activity 3</span>
         </a>
         
         <button class="mode-btn" id="modeBtn">
@@ -588,7 +588,7 @@
                     </div>
                     <h3>Solar-Powered Irrigation</h3>
                     <p>Designing an efficient system that uses solar energy to power water pumps for agricultural irrigation, reducing reliance on fossil fuels.</p>
-                    <a href="activity1.html" class="btn">View Project</a>
+                    <a href="activity1.html" class="btn">View Activity 1</a>
                 </div>
 
                 <div class="activity-card" onclick="location.href='activity2.html'">
@@ -598,7 +598,7 @@
                     </div>
                     <h3>Geothermal Power Plant</h3>
                     <p>Modeling a plant that harnesses Earth's internal heat to generate clean, reliable baseload electricity.</p>
-                    <a href="activity2.html" class="btn">View Project</a>
+                    <a href="activity2.html" class="btn">View Activity 2</a>
                 </div>
 
                 <div class="activity-card" onclick="location.href='activity3.html'">
@@ -608,13 +608,14 @@
                     </div>
                     <h3>Biomass Biogas System</h3>
                     <p>Developing a system to convert organic waste into usable biogas for cooking and electricity, promoting a circular economy.</p>
-                    <a href="activity3.html" class="btn">View Project</a>
+                    <a href="activity3.html" class="btn">View Activity 3</a>
                 </div>
             </main>
 
             <footer>
                 <div class="footer-content">
                     <p>Energy Systems Design Portfolio &copy; 2025 | By VARUN DAMA (RA2311003011322)</p>
+                    <p>B.TECH | CSE-CORE</p>
                     <a href="https://varun-dama.vercel.app/" class="portfolio-link" target="_blank">
                         <i class="fas fa-external-link-alt"></i>
                         Visit My Portfolio
