Revise portfolio title and activity descriptions
Updated the title and content of the portfolio to reflect a focus on clean and green energy solutions. Adjusted activity descriptions for clarity and relevance.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Energy Systems Design Portfolio</title>
+    <title>Clean & Green Energy Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -238,6 +238,9 @@
             color: #7f8c8d;
             font-size: 1.1em;
             margin-bottom: 30px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         body.dark-mode header h1 {
@@ -576,8 +579,8 @@
     <div class="main-content" id="mainContent">
         <div class="container">
             <header>
-                <h1>Energy Systems Design Portfolio</h1>
-                <p>Exploring innovative and sustainable solutions for the future of energy.</p>
+                <h1>Clean & Green Energy Portfolio</h1>
+                <p>Exploring innovative and sustainable solutions for renewable energy systems. This portfolio showcases three comprehensive designs for clean energy technologies that can help build a sustainable future.</p>
             </header>
 
             <main class="activities-grid">
@@ -587,7 +590,7 @@
                         <i class="fas fa-sun"></i>
                     </div>
                     <h3>Solar-Powered Irrigation</h3>
-                    <p>Designing an efficient system that uses solar energy to power water pumps for agricultural irrigation, reducing reliance on fossil fuels.</p>
+                    <p>Designing an efficient system that uses solar energy to power water pumps for agricultural irrigation, reducing reliance on fossil fuels and promoting sustainable farming practices.</p>
                     <a href="activity1.html" class="btn">View Activity 1</a>
                 </div>
 
@@ -597,7 +600,7 @@
                         <i class="fas fa-fire"></i>
                     </div>
                     <h3>Geothermal Power Plant</h3>
-                    <p>Modeling a plant that harnesses Earth's internal heat to generate clean, reliable baseload electricity.</p>
+                    <p>Modeling a plant that harnesses Earth's internal heat to generate clean, reliable baseload electricity with minimal environmental impact and continuous operation.</p>
                     <a href="activity2.html" class="btn">View Activity 2</a>
                 </div>
 
@@ -607,15 +610,15 @@
                         <i class="fas fa-recycle"></i>
                     </div>
                     <h3>Biomass Biogas System</h3>
-                    <p>Developing a system to convert organic waste into usable biogas for cooking and electricity, promoting a circular economy.</p>
+                    <p>Developing a system to convert organic waste into usable biogas for cooking and electricity, promoting a circular economy and reducing methane emissions.</p>
                     <a href="activity3.html" class="btn">View Activity 3</a>
                 </div>
             </main>
 
             <footer>
                 <div class="footer-content">
-                    <p>Energy Systems Design Portfolio &copy; 2025 | By VARUN DAMA (RA2311003011322)</p>
-                    <p>B.TECH | CSE-CORE</p>
+                    <p>Clean & Green Energy Portfolio &copy; 2025 | By VARUN DAMA (RA2311003011322)</p>
+                    <p>B.TECH | CSE-CORE | Sustainable Energy Systems</p>
                     <a href="https://varun-dama.vercel.app/" class="portfolio-link" target="_blank">
                         <i class="fas fa-external-link-alt"></i>
                         Visit My Portfolio
